--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ bevy_rapier3d = { version = "0.32", features = [ "simd-stable", "debug-render-3d
 smallvec = "1.13"
 bevy_mesh = "0.17.3"
 futures-lite = "2.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
