--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 license = "AGPL-3.0-only"
 
 [features]
-burn_runtime = []
+burn_runtime = ["burn"]
 
 [[bin]]
 name = "sim_view"
@@ -30,6 +30,7 @@ serde_json = "1.0"
 image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
 rand = "0.8"
 clap = { version = "4.5", features = ["derive"] }
+burn = { version = "0.14", optional = true }
 
 [dev-dependencies]
 tempfile = "3.10"
