--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ path = "src/bin/overlay_labels.rs"
 name = "train"
 path = "src/bin/train.rs"
 
+[[bin]]
+name = "eval"
+path = "src/bin/eval.rs"
+
 [dependencies]
 bevy = "0.17.3"
 bevy_rapier3d = { version = "0.32", features = [ "simd-stable", "debug-render-3d" ] }
