--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "AGPL-3.0-only"
 [features]
 burn_runtime = ["burn", "burn/ndarray", "burn/autodiff", "burn-ndarray"]
 burn_wgpu = ["burn", "burn/autodiff", "burn-wgpu"]
+burn_runtime_wgpu = ["burn_runtime", "burn_wgpu"]
 
 [[bin]]
 name = "sim_view"
