--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ crossterm = { version = "0.27", optional = true }
 sysinfo = { version = "0.30", optional = true, default-features = true, features = ["multithread"] }
 thiserror = "1.0"
 nvml-wrapper = { version = "0.8", optional = true }
+rayon = "1.8"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 metal = "0.29"
