Add vendor-specific warehouse command helpers for NVIDIA/AMD

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,12 +51,20 @@ path = "src/bin/datagen_scheduler.rs"
 required-features = ["scheduler"]
 
 [[bin]]
-name = "warehouse_ps_command"
-path = "tools/warehouse_commands/bin/ps.rs"
+name = "warehouse_nvidia_ps_command"
+path = "tools/warehouse_commands/bin/nvidia_ps.rs"
 
 [[bin]]
-name = "warehouse_sh_command"
-path = "tools/warehouse_commands/bin/sh.rs"
+name = "warehouse_amd_ps_command"
+path = "tools/warehouse_commands/bin/amd_ps.rs"
+
+[[bin]]
+name = "warehouse_nvidia_sh_command"
+path = "tools/warehouse_commands/bin/nvidia_sh.rs"
+
+[[bin]]
+name = "warehouse_amd_sh_command"
+path = "tools/warehouse_commands/bin/amd_sh.rs"
 
 [dependencies]
 bevy = "0.17.3"
