--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 checklist.md
 docs/burn_architecture.md
 docs/ml_refactor_plan.md
-docs/book/
+docs/book_build/
 assets/datasets/
 media/
 ml_pipeline.md
