Add BigDet model option and wire inference/training to shared models crate

--- a/inference/Cargo.toml
+++ b/inference/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 publish = false
 
 [features]
-default = ["backend-ndarray"]
+default = ["backend-ndarray", "tinydet"]
 backend-ndarray = ["burn-ndarray"]
 backend-wgpu = ["burn-wgpu"]
+tinydet = ["models/tinydet"]
+bigdet = ["models/bigdet"]
 
 [lib]
 name = "inference"
