--- a/crates/colon_sim/Cargo.toml
+++ b/crates/colon_sim/Cargo.toml
@@ -66,4 +66,4 @@ metal = "0.29"
 
 [dev-dependencies]
 tempfile = "3.10"
-models = { path = "../../models" }
+models = { package = "cortenforge-models", path = "../../models", version = "0.1.0" }
