--- a/inference/Cargo.toml
+++ b/inference/Cargo.toml
@@ -32,5 +32,5 @@ bevy = "0.17.3"
 burn = { version = "0.14", default-features = false, features = ["autodiff"] }
 burn-ndarray = { version = "0.14", default-features = false, optional = true }
 burn-wgpu = { version = "0.14", optional = true, default-features = true }
-models = { version = "0.1.0" }
+models = { package = "cortenforge-models", version = "0.1.0" }
 bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
