add deprecation notes for old crate names

--- a/data_contracts/Cargo.toml
+++ b/data_contracts/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
 publish = true
-description = "Data contracts for run manifests and capture metadata used across the CortenForge stack."
+description = "Data contracts for run manifests and capture metadata used across the CortenForge stack. Renamed to cortenforge-data-contracts; please use that crate instead."
 repository = "https://github.com/via-balaena/Deep_Poo"
 homepage = "https://github.com/via-balaena/Deep_Poo"
 documentation = "https://docs.rs/cortenforge-data-contracts"
