--- a/capture_utils/Cargo.toml
+++ b/capture_utils/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
 publish = true
-description = "Capture helpers and recorder sinks (JSON, overlays, pruning) for the CortenForge stack."
+description = "Capture helpers and recorder sinks (JSON, overlays, pruning) for the CortenForge stack. Renamed from capture_utils; old crate deprecated—use this name."
 repository = "https://github.com/via-balaena/Deep_Poo"
 homepage = "https://github.com/via-balaena/Deep_Poo"
 documentation = "https://docs.rs/cortenforge-capture-utils"
