--- a/sim_core/Cargo.toml
+++ b/sim_core/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
 publish = true
-description = "Bevy-based simulation runtime primitives (modes, config, plugins) for the CortenForge stack."
+description = "Bevy-based simulation runtime primitives (modes, config, plugins) for the CortenForge stack. Renamed from sim_core; old crate deprecated—use this name."
 repository = "https://github.com/via-balaena/Deep_Poo"
 homepage = "https://github.com/via-balaena/Deep_Poo"
 documentation = "https://docs.rs/cortenforge-sim-core"
