--- a/vision_runtime/Cargo.toml
+++ b/vision_runtime/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
 publish = true
-description = "Bevy plugins for capture and inference runtime built on vision_core for the CortenForge stack."
+description = "Bevy plugins for capture and inference runtime built on vision_core for the CortenForge stack. Renamed from vision_runtime; old crate deprecated—use this name."
 repository = "https://github.com/via-balaena/Deep_Poo"
 homepage = "https://github.com/via-balaena/Deep_Poo"
 documentation = "https://docs.rs/cortenforge-vision-runtime"
