--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -2,7 +2,7 @@ name: Deploy mdBook
 
 on:
   push:
-    branches: [ refactor ]
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -20,22 +20,18 @@ jobs:
           wget https://github.com/rust-lang/mdBook/releases/download/v0.4.40/mdbook-v0.4.40-x86_64-unknown-linux-gnu.tar.gz
           tar -xzf mdbook-v0.4.40-x86_64-unknown-linux-gnu.tar.gz
           sudo mv mdbook /usr/local/bin/
-      - name: Build books
+      - name: Build contributor book
         run: |
-          mdbook build docs/user_book
           mdbook build docs/contributor_book
           mkdir -p docs/site_build
-          cp -r docs/user_book/book docs/site_build/user
           cp -r docs/contributor_book/book docs/site_build/contributor
-          # Simple index to link both books
           cat > docs/site_build/index.html <<'EOF'
           <!DOCTYPE html>
           <html>
-          <head><meta charset="UTF-8"><title>Pipelinea Docs</title></head>
+          <head><meta charset="UTF-8"><title>CortenForge Docs</title></head>
           <body>
-          <h1>Pipelinea Documentation</h1>
+          <h1>CortenForge Documentation</h1>
           <ul>
-            <li><a href="user/">User Guide</a></li>
             <li><a href="contributor/">Contributor Guide</a></li>
           </ul>
           </body>
