Updated mdbook.yml to build and deploy only the contributor book

--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -21,28 +21,13 @@ jobs:
           tar -xzf mdbook-v0.4.40-x86_64-unknown-linux-gnu.tar.gz
           sudo mv mdbook /usr/local/bin/
       - name: Build contributor book
-        run: |
-          mdbook build docs/contributor_book
-          mkdir -p docs/site_build
-          cp -r docs/contributor_book/book docs/site_build/contributor
-          cat > docs/site_build/index.html <<'EOF'
-          <!DOCTYPE html>
-          <html>
-          <head><meta charset="UTF-8"><title>CortenForge Docs</title></head>
-          <body>
-          <h1>CortenForge Documentation</h1>
-          <ul>
-            <li><a href="contributor/">Contributor Guide</a></li>
-          </ul>
-          </body>
-          </html>
-          EOF
+        run: mdbook build docs/contributor_book
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: docs/site_build
+          publish_dir: docs/contributor_book/book
           force_orphan: true
           user_name: github-actions[bot]
           user_email: 41898282+github-actions[bot]@users.noreply.github.com
