--- a/data_contracts/Cargo.toml
+++ b/data_contracts/Cargo.toml
@@ -17,6 +17,6 @@ rust-version = "1.75"
 name = "data_contracts"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "1.0"
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+thiserror = { workspace = true }
