--- a/inference/Cargo.toml
+++ b/inference/Cargo.toml
@@ -25,12 +25,12 @@ name = "inference"
 path = "src/lib.rs"
 
 [dependencies]
-anyhow = "1.0"
+anyhow = { workspace = true }
 vision_core = { package = "cortenforge-vision-core", version = "0.1.1" }
 sim_core = { package = "cortenforge-sim-core", version = "0.1.1" }
-bevy = "0.17.3"
-burn = { version = "0.14", default-features = false, features = ["autodiff"] }
-burn-ndarray = { version = "0.14", default-features = false, optional = true }
-burn-wgpu = { version = "0.14", optional = true, default-features = true }
+bevy = { version = "0.17.3" }
+burn = { workspace = true, features = ["autodiff"] }
+burn-ndarray = { workspace = true, optional = true }
+burn-wgpu = { workspace = true, optional = true}
 models = { package = "cortenforge-models", version = "0.1.1" }
-bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
+bincode = { workspace = true, features = ["alloc", "serde"] }
