--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,21 @@ members = [
 ]
 resolver = "2"
 
+[workspace.dependencies]
+anyhow = "1.0"
+bincode = { version = "2.0.0-rc.3", default-features = false }
+burn = { version = "0.14", default-features = false }
+burn-ndarray = { version = "0.14", default-features = false }
+burn-wgpu = { version = "0.14", default-features = true }
+clap = "4.5"
+image = { version = "0.24", default-features = false }
+rayon = "1.8"
+serde = "1.0"
+serde_json = "1.0"
+sha2 = "0.10"
+tempfile = "3.10"
+thiserror = "1.0"
+
 [patch.crates-io]
 burn-core = { path = "vendor/burn-core-0.14.0" }
 cortenforge-models = { path = "models" }
