--- a/capture_utils/Cargo.toml
+++ b/capture_utils/Cargo.toml
@@ -19,10 +19,10 @@ name = "capture_utils"
 [dependencies]
 vision_core = { package = "cortenforge-vision-core", version = "0.1.1" }
 data_contracts = { package = "cortenforge-data-contracts", version = "0.1.1" }
-image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-anyhow = "1.0"
+image = { workspace = true, features = ["png", "rayon"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+anyhow = { workspace = true }
 
 [dev-dependencies]
-tempfile = "3.10"
+tempfile = { workspace = true }
