--- a/crates/cli_support/Cargo.toml
+++ b/crates/cli_support/Cargo.toml
@@ -20,5 +20,5 @@ default = []
 bevy-resource = ["bevy"]
 
 [dependencies]
-clap = { version = "4.5", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 bevy = { version = "0.17.3", optional = true, default-features = false }
