--- a/sim_core/Cargo.toml
+++ b/sim_core/Cargo.toml
@@ -17,6 +17,6 @@ rust-version = "1.75"
 name = "sim_core"
 
 [dependencies]
-bevy = "0.17.3"
+bevy = { version = "0.17.3" }
 bevy_rapier3d = { version = "0.32", features = ["simd-stable", "debug-render-3d"] }
 vision_core = { package = "cortenforge-vision-core", version = "0.1.1" }
