--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -10,7 +10,7 @@ name = "cortenforge-tools"
 version = "0.1.2"
 edition = "2021"
 license = "Apache-2.0"
-publish = false
+publish = true
 repository = "https://github.com/via-balaena/CortenForge"
 homepage = "https://github.com/via-balaena/CortenForge"
 
