chore: patch cortenforge-tools for publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ cortenforge-vision-runtime = { path = "vision_runtime" }
 cortenforge-inference = { path = "inference" }
 cortenforge-training = { path = "training" }
 cortenforge = { path = "crates/cortenforge" }
+cortenforge-tools = { path = "tools" }
