--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@1.78.0
       - name: Install mdBook
         run: |
           cargo install mdbook --version 0.5.2
