--- a/crates/burn_dataset/Cargo.toml
+++ b/crates/burn_dataset/Cargo.toml
@@ -23,14 +23,14 @@ burn_runtime = ["burn", "burn-ndarray", "crossbeam-channel", "memmap2", "rayon"]
 anyhow = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-rand = { version = "0.8" }
+rand = { workspace = true }
 thiserror = { workspace = true }
 image = { workspace = true, features = ["png", "rayon"] }
 data_contracts = { package = "cortenforge-data-contracts", version = "0.1.5" }
 burn = { workspace = true, optional = true, features = ["autodiff", "std"] }
 burn-ndarray = { workspace = true, optional = true }
-crossbeam-channel = { version = "0.5", optional = true }
-memmap2 = { version = "0.9", optional = true }
+crossbeam-channel = { workspace = true, optional = true }
+memmap2 = { workspace = true, optional = true }
 rayon = { workspace = true, optional = true }
 sha2 = { workspace = true }
 
