--- a/crates/vision_runtime/Cargo.toml
+++ b/crates/vision_runtime/Cargo.toml
@@ -23,4 +23,4 @@ sim_core = { package = "cortenforge-sim-core", version = "0.1.5" }
 vision_core = { package = "cortenforge-vision-core", version = "0.1.5" }
 anyhow = { workspace = true }
 image = { workspace = true, features = ["png"] }
-futures-lite = { version = "2.3" }
+futures-lite = { workspace = true }
