--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -31,19 +31,19 @@ clap = { workspace = true, features = ["derive"] }
 anyhow = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-toml = "0.8"
+toml = { workspace = true }
 image = { workspace = true, features = ["png", "rayon"] }
-sysinfo = { version = "0.30", optional = true, features = ["multithread"] }
+sysinfo = { workspace = true, optional = true }
 rayon = { workspace = true }
 sha2 = { workspace = true }
-arrow-array = { version = "46" }
-arrow-schema = { version = "46" }
-arrow-select = { version = "46" }
-parquet = { version = "46", features = ["arrow"] }
-crossterm = { version = "0.27", optional = true }
-ratatui = { version = "0.26", optional = true, default-features = false, features = ["crossterm"] }
+arrow-array = { workspace = true }
+arrow-schema = { workspace = true }
+arrow-select = { workspace = true }
+parquet = { workspace = true }
+crossterm = { workspace = true, optional = true }
+ratatui = { workspace = true, optional = true }
 thiserror = { workspace = true }
-nvml-wrapper = { version = "0.8", optional = true }
+nvml-wrapper = { workspace = true, optional = true }
 
 [dev-dependencies]
 pretty_assertions = "1.4"
