--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,9 @@ data-contracts = ["dep:data_contracts"]
 models = ["dep:models"]
 inference = ["vision-core", "sim-core", "models", "dep:inference"]
 training = ["sim-core", "vision-core", "models", "dep:training"]
-# TODO(v0.3+): if we add alias names, drop legacy aliases in the next breaking release.
+# TODO(post-0.3): drop legacy alias `burn_runtime` after one compatibility cycle.
 burn-runtime = ["inference", "training", "burn", "burn-ndarray", "bincode"]
+burn_runtime = ["burn-runtime"]
 burn-wgpu = ["burn-runtime", "dep:burn-wgpu"]
 burn-dataset = ["burn_dataset"]
 cli-support = ["cli_support"]
