--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -3,7 +3,8 @@ default = []
 tui = ["crossterm", "ratatui"]
 scheduler = ["sysinfo"]
 # Optional GPU feature flag to mirror root workspace flag.
-# TODO(v0.3+): if we add a `gpu-nvidia` alias, drop `gpu_nvidia` in the next breaking release.
+# TODO(post-0.3): drop legacy `gpu_nvidia` after one compatibility cycle.
+gpu-nvidia = ["gpu_nvidia"]
 gpu_nvidia = ["nvml-wrapper"]
 gpu_amd_windows = []
 
