--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -3,9 +3,7 @@ default = []
 tui = ["crossterm", "ratatui"]
 scheduler = ["sysinfo"]
 # Optional GPU feature flag to mirror root workspace flag.
-# TODO(post-0.3): drop legacy `gpu_nvidia` after one compatibility cycle.
-gpu-nvidia = ["gpu_nvidia"]
-gpu_nvidia = ["nvml-wrapper"]
+gpu-nvidia = ["nvml-wrapper"]
 gpu_amd_windows = []
 
 [package]
