fix(tools): add warehouse feature for burn-runtime dependency
The warehouse bins (warehouse_cmd, warehouse_etl, warehouse_export) require
the WarehouseManifest type from burn_dataset, which is gated behind the
burn-runtime feature. This commit:

- Adds a 'warehouse' feature to cortenforge-tools
- Enables burn_dataset/burn-runtime when warehouse feature is active
- Explicitly defines warehouse bins with required-features

This allows the crate to publish successfully without requiring burn-runtime
by default, while still supporting the warehouse tools when needed.

--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -2,6 +2,7 @@
 default = []
 tui = ["crossterm", "ratatui"]
 scheduler = ["sysinfo"]
+warehouse = ["burn_dataset/burn-runtime"]
 # Optional GPU feature flag to mirror root workspace flag.
 gpu-nvidia = ["nvml-wrapper"]
 gpu-windows = []
@@ -62,3 +63,18 @@ path = "src/bin/gpu_probe.rs"
 name = "datagen_scheduler"
 path = "src/bin/datagen_scheduler.rs"
 required-features = ["scheduler"]
+
+[[bin]]
+name = "warehouse_cmd"
+path = "src/bin/warehouse_cmd.rs"
+required-features = ["warehouse"]
+
+[[bin]]
+name = "warehouse_etl"
+path = "src/bin/warehouse_etl.rs"
+required-features = ["warehouse"]
+
+[[bin]]
+name = "warehouse_export"
+path = "src/bin/warehouse_export.rs"
+required-features = ["warehouse"]
